EKS-manifests/api-backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat-app
      tier: backend
  template:
    metadata:
      labels:
      app: chat-app
      tier: backend
    spec:
      containers:
      - name: chat-app-backend
        image: <image-name:tag>  # update the backend image from dockerhub
        ports:
        - containerPort: 8080
