EKS-manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freeapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freeapi
  template:
    metadata:
      labels:
        app: freeapi
    spec:
      containers:
      - name: freeapi
        image: noscopev6/chatapi:v1
        ports:
        - containerPort: 8080
