EKS-manifests/frontend-app-deploy-.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app-frontend
  template:
    metadata:
      labels:
        app: chat-app-frontend
    spec:
      containers:
      - name: chat-app-frontend
        image: <image-name:tag>  # Replace with your Dockerhub image name and tag with frontend image
        ports:
        - containerPort: 3000
