EKS-manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: freeapi-service
spec:
  selector:
    app: freeapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 32000  # Specify your desired static NodePort here
  type: NodePort

## kubectl apply -f https://github.com/weaveworks/weave/releases/download/v2.8.1/weave-daemonset-k8s.yaml






# apiVersion: v1
# kind: Service
# metadata:
#   name: freeapi-service
# spec:
#   selector:
#     app: freeapi
#   ports:
#     - protocol: TCP
#       port: 8080
#       targetPort: 8080
#   type: LoadBalancer # or NodePort depending on your requirements
